# cartesio_acceleration_support

./: CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  tasks.cpp  validity_check.cpp
examples/config/: coman_stack_force.yaml
examples/launch/: coman_force.launch
examples/rviz/: coman_force.rviz
include/cartesio_acceleration_support/: CoP.h  DynamicFeasibility.h  Force.h  ForceLimits.h  FrictionCone.h  NormalTorque.h  PosturalInteraction.h  TorqueLimits.h
msg/: SetForceLimits.msg
src/: Cartesian.cpp  Cartesian.h  CoM.cpp  CoM.h  CoP.cpp  CoP.h  CoP.hpp  DynamicFeasibility.cpp  DynamicFeasibility.h  DynamicFeasibility.hpp  Force.cpp  Force.h  Force.hpp  ForceLimits.cpp  ForceLimits.h  ForceLimits.hpp  ForceOptimization.cpp  ForceOptimization.h  ForceOptimizationNode.cpp  FrictionCone.cpp  FrictionCone.h  FrictionCone.hpp  Interaction.cpp  Interaction.h  JointLimits.cpp  JointLimits.h  NormalTorque.cpp  NormalTorque.h  NormalTorque.hpp  Postural.cpp  Postural.h  PosturalInteraction.cpp  PosturalInteraction.h  PosturalInteraction.hpp  TorqueLimits.cpp  TorqueLimits.h  TorqueLimits.hpp  VelocityLimits.cpp  VelocityLimits.h  cartesian_impedance_solver.cpp  (+1 more)
